# ProteusAI

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  environment_test.yml  proteusEnvironment.yml  pyproject.toml  requirements.txt  run_benchmark.sh  setup.py
.github/workflows/: cicd.yaml
Advent of code/: Advent_of_code.ipynb
LLM_tools/: esm_tools.py
Projects/activity_prediction/: RL.py  __init__.py  activity_predictor.py  compute_representations.py  model_optimization.py  pytorchtools.py  train.py
Projects/notebooks/: GB1.ipynb  dna_contacts.ipynb  escape_values.ipynb  video.py  zero_shot.ipynb
Projects/visualizations/: illustrations.ipynb
analysis/: ML.py  MSA.py  interactions.py  pdb.py  video.py
app/: app.py  app_new.py  globals.py  shared_state.py  tooltips.py
app/data/: data.py
app/design/: design.py
benchmarking/: embedding_benchmark.py
demo/: BO_benchmark.py  MLDE_benchmark.py  clustering_demo.py  demo.ipynb  demo.py  design_demo.py  discovery_demo.py  fold_design_demo.py  mlde_demo.py  plot_benchmark.py  plot_library_demo.py  test  zero_shot_demo.py
demo/demo_data/: GB1_raw.csv  GB1_wt.fasta  Nitric_Oxide_Dioxygenase.csv  Nitric_Oxide_Dioxygenase_wt.fasta  methyltransfereases.csv
design/: Constraints.py  MCMC.py  ZeroShot.py  constraints.py
docs/: .gitignore  README.md  conf.py  index.rst
docs/tutorial/: tutorial.py
embedd/: embedd_esm.py  embedd_gvp.py
example_data/A0A6B9VLF5/: A0A6B9VLF5_mut.fasta  EscapeScores.csv  ptm0.181_r3_default.pae.txt
example_data/ComR/: all_binding_regions.fasta  mutants
example_data/docking/: docking.csv
example_data/molecules/: N-acetlserotonin.sdf  SAH.sdf  SAM.sdf  SAM_melatonin_transition_state.sdf  melatonin.sdf
extraction/: embedd.py  sequence_esm.py
io_tools/: embeddings.py  fasta.py  pdb.py  representations.py
mining/: alphafoldDB.py  blast.py  uniprot.py
models/: activity_predictor.py  model_optimization.py  pytorchtools.py  train.py  utils.py
notebooks/: classification.ipynb  design.ipynb  discovery.ipynb  regression.ipynb  test.ipynb
plm_tools/: esm_tools.py
projects/activity_prediction/: compute_VAE_representations.py  (+17 more)
sampler/: MCMC.py  constraints.py
scripts/: correct.sh  design.py  design_test.py  dock.sh  embedd.py  hallucination.py  make_video.py  setup_gbar.txt  submit.sh  test  test.py  test_folding.py  zero_shot_test.py
simulation/: structure_prediction.py
tests/: test_module.py
(+11896 files in other folders)
