[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proteusAI"
version = "0.0.4"
requires-python = ">= 3.8"
description = "ProteusAI is a python package designed for AI driven protein engineering."
readme = "README.md"

dependencies = [
  "torch==2.4.1",
  "torch_geometric",
  "torch-scatter",
  "uvicorn",
  "asgiref",
  "starlette",
  #"pdbfixer",
  "shiny",
  "pandas",
  "numpy",
  "requests",
  "scipy",
  "fair-esm",
  "matplotlib",
  "biopython",
  "biotite",
  "scikit-learn",
  "optuna",
  "seaborn",
  "openpyxl",
  "py3Dmol",
  "gpytorch",
  "openmm",
  "umap-learn",
  "proteusAI",
  #"pdbfixer @ git+https://github.com/openmm/pdbfixer@1.9"
]

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-nb",
  "ipywidgets",
  "sphinx-new-tab-link!=0.2.2",
  "jupytext",
]
dev = ["black", "ruff", "pytest", "flake8", "flake8-import-order", "flake8-builtins", "flake8-bugbear"]

# Handle imports with flake8
[tool.flake8]
max-line-length = 88
import-order-style = "google"
application-import-names = ["proteusAI"]

